# some-qt-lib

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  some-qt-lib-config.cmake.in
src/cmake/: SomeQtLibModule.cmake
src/core/: CMakeLists.txt  object.cpp
src/core/include/some-qt-lib/: object.hpp
test_package/: CMakeLists.txt
tests/: CMakeLists.txt  tst_object.cpp
